# convoguide

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md
agent/: pyproject.toml
agent/src/: __init__.py  main.py  session_state.py
agent/src/prompts/: __init__.py  convoguide.py  specialists.py
agent/src/tools/: __init__.py  clarity.py  creativity.py  debate.py  empathy.py  humor.py  serious.py  storyweaver.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/token/: route.ts
frontend/src/components/: ChatInterface.tsx  VoiceAgent.tsx
